--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 @mixin title {
     font-size: 2rem;
 }
@@ -16,4 +18,29 @@
 
 @mixin bottom-space {
     margin-bottom: 3rem;
+}
+
+@mixin aside-default {
+    flex: 30%;
+    margin: 3rem;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    color: $color-primary;
+
+    @include respond(small) {
+        margin: .5rem;
+
+    }
+
+    @include respond(medium) {
+        flex: 100%;
+
+    }
+    & > * {
+        margin: 1rem;
+        padding: .5rem;
+        border-radius: 4px;
+    }
+
+
+
 }
