feat(24): carousel works but its still ugly - neet to check content and parent size -> calculate offset

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,7 +2,16 @@
     <main class="main">
         <h1>Upcoming Events</h1>
         <div class="events">
-            <surf-event-card *ngFor="let surfEvent of events" [surfEvent]="surfEvent"></surf-event-card>
+            <surf-carousel *ngIf="smallScreen">
+                <ng-container *ngFor="let surfEvent of events">
+                    <surf-event-card [surfEvent]="surfEvent" *carousel-item></surf-event-card>
+                </ng-container>
+            </surf-carousel>
+            <ng-container *ngIf="!smallScreen">
+                <ng-container *ngFor="let surfEvent of events">
+                    <surf-event-card [surfEvent]="surfEvent"></surf-event-card>
+                </ng-container>
+            </ng-container>
         </div>
     </main>
     <aside class="aside">
