--- a/src/app/views/home/event-card/event-card.component.html
+++ b/src/app/views/home/event-card/event-card.component.html
@@ -8,7 +8,7 @@
         <mat-card-subtitle>{{surfEvent.location}}</mat-card-subtitle>
         <p class="event__card__header__date">{{surfEvent.startDateTime | date:'dd.MM.YYYY'}}</p>
     </mat-card-header>
-    <img mat-card-image src="{{surfEvent.mainPicture}}"
+    <img draggable="false" mat-card-image src="{{surfEvent.mainPicture}}"
          alt="{{surfEvent.name}}">
     <mat-card-content>
         <p>
