--- a/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
+++ b/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
@@ -1,18 +1,14 @@
 <mat-tab-group>
-    <mat-tab label="Ongoing">
-        <h1>RiverSurfJam 2021</h1>
-        <h2>Thun</h2>
-        <p>Ride the waves!</p>
-        <surf-timeline *ngIf="currentTimeline" [timeline]="currentTimeline.timeline"></surf-timeline>
+    <mat-tab *ngIf="currentTimeline" label="Ongoing">
+        <h1>{{currentTimeline.event.name}}</h1>
+        <h2>{{currentTimeline.event.location}}</h2>
+        <p>{{currentTimeline.event.description}}</p>
+        <surf-timeline *ngIf="currentTimeline.timeline" [timeline]="currentTimeline.timeline"></surf-timeline>
     </mat-tab>
-<!--    <mat-tab label="2020">-->
-<!--        <h1>RiverSurfJam 2020</h1>-->
-<!--        <h2>Thun</h2>-->
-<!--        <surf-timeline [timeline]="historyTimeline[0]?.timeline"></surf-timeline>-->
-<!--    </mat-tab>-->
-<!--    <mat-tab label="2019">-->
-<!--        <h1>RiverSurfJam 2019</h1>-->
-<!--        <h2>Thun</h2>-->
-<!--        <surf-timeline [timeline]="historyTimeline[1]?.timeline"></surf-timeline>-->
-<!--    </mat-tab>-->
+    <mat-tab *ngFor="let historicalEvent of historyTimeline" label="{{historicalEvent.event.startDateTime.getFullYear()}}">
+        <h1>{{historicalEvent.event.name}}</h1>
+        <h2>{{historicalEvent.event.location}}</h2>
+        <p>{{historicalEvent.event.description}}</p>
+        <surf-timeline *ngIf="historicalEvent.timeline" [timeline]="historicalEvent.timeline"></surf-timeline>
+    </mat-tab>
 </mat-tab-group>
