--- a/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.scss
+++ b/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.scss
@@ -1,21 +1,44 @@
-.mat-list-item {
-    height: auto;
-}
+.container {
+    display: grid;
+    grid-template-columns: min-content auto;
+    grid-template-rows: min-content;
+    column-gap: 1rem;
+    row-gap: 1rem;
 
-.riderHeader {
-    margin: auto;
-    text-align: center;
-
-    img {
-        display: block;
-        height: 100%;
-        max-width: 200px;
-        border-radius: 50%;
+    &__header {
+        grid-column-start: 1;
+        grid-column-end: 3;
         margin: auto;
+        text-align: center;
+
+        img {
+            display: block;
+            height: 100%;
+            max-width: 200px;
+            border-radius: 50%;
+            margin: auto;
+        }
+    }
+
+    &__social{
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    &__biography{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        font-style: italic;
+    }
+
+    &__attribute{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        font-weight: bold;
+    }
+
+    &__value{
+        grid-column-start: 2;
+        grid-column-end: 3;
     }
 }
-
-p{
-    font-style: italic;
-}
-
