Added timeline line component

--- a/src/app/common/timeline/time-line.component.html
+++ b/src/app/common/timeline/time-line.component.html
@@ -1,3 +1,6 @@
+<surf-time-line-line [next]="true"></surf-time-line-line>
+<surf-time-line-line [previous]="true" [next]="true"></surf-time-line-line>
+<surf-time-line-line [ongoing]="true" [previous]="true"></surf-time-line-line>
 <mat-vertical-stepper *ngIf="timeline" #stepper>
     <ng-template matStepperIcon="edit"></ng-template>
     <ng-template matStepperIcon="done"></ng-template>
