--- a/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
+++ b/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.html
@@ -3,12 +3,12 @@
         <h1>{{currentTimeline.event.name}}</h1>
         <h2>{{currentTimeline.event.location}}</h2>
         <p>{{currentTimeline.event.description}}</p>
-        <surf-timeline *ngIf="currentTimeline.timeline" [timeline]="currentTimeline.timeline"></surf-timeline>
+        <surf-time-line *ngIf="currentTimeline.timeline" [timeline]="currentTimeline.timeline"></surf-time-line>
     </mat-tab>
     <mat-tab *ngFor="let historicalEvent of historyTimeline" label="{{historicalEvent.event.startDateTime.getFullYear()}}">
         <h1>{{historicalEvent.event.name}}</h1>
         <h2>{{historicalEvent.event.location}}</h2>
         <p>{{historicalEvent.event.description}}</p>
-        <surf-timeline *ngIf="historicalEvent.timeline" [timeline]="historicalEvent.timeline"></surf-timeline>
+        <surf-time-line *ngIf="historicalEvent.timeline" [timeline]="historicalEvent.timeline"></surf-time-line>
     </mat-tab>
 </mat-tab-group>
