--- a/src/app/common/time-line/time-line-line/time-line-line.component.scss
+++ b/src/app/common/time-line/time-line-line/time-line-line.component.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 
 $event-color: #3f51b5;
 $event-width:1.5rem;
@@ -13,31 +14,34 @@ $line-width: 0.1rem;
     row-gap: 0;
     min-height: 2rem;
     height: 100%;
+    min-width: $event-width * 2;
 
     &__item{
 
         &__one{
             grid-column: 1 / 2;
             grid-row: 1 / 2;
-            border-right: ($line-width / 2) solid $line-color;
+            border-right: math.div($line-width, 2) solid $line-color;
         }
 
         &__two{
             grid-column: 2 / 3;
             grid-row: 1 / 2;
-            border-left: ($line-width / 2) solid $line-color;
+            border-left: math.div($line-width, 2) solid $line-color;
+            border-bottom: math.div($line-width, 2) dashed $line-color;
         }
 
         &__three{
             grid-column: 1 / 2;
             grid-row: 2 / 3;
-            border-right: ($line-width / 2) solid $line-color;
+            border-right: math.div($line-width, 2) solid $line-color;
         }
 
         &__four{
             grid-column: 2 / 3;
             grid-row: 2 / 3;
-            border-left: ($line-width / 2) solid $line-color;
+            border-left: math.div($line-width, 2) solid $line-color;
+            border-top: math.div($line-width, 2) dashed $line-color;
         }
 
         &__full{
@@ -64,5 +68,6 @@ $line-width: 0.1rem;
 }
 
 .noBorder{
-    border: none;
+    border-left: none;
+    border-right: none;
 }
