--- a/src/app/common/time-line/time-line.component.html
+++ b/src/app/common/time-line/time-line.component.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
             </mat-card-title>
-            <mat-card-subtitle *ngIf="timelineItem.time" >{{timelineItem.time | date}}</mat-card-subtitle>
+            <mat-card-subtitle *ngIf="timelineItem.time" >{{timelineItem.time | date:'HH:mm | d. MMMM YYYY'}}</mat-card-subtitle>
             <mat-card-content *ngIf="timelineItem.content">{{timelineItem.content}}</mat-card-content>
         </mat-card>
     </div>
