--- a/src/app/views/riders/riders.component.scss
+++ b/src/app/views/riders/riders.component.scss
@@ -102,7 +102,7 @@
         }
 
         &--center {
-            box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+            box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
             display: flex;
             flex-direction: column;
             padding: 2rem;
@@ -114,11 +114,7 @@
         }
 
         .mat-form-field {
-            width: 40%;
-
-            @include respond(medium) {
-                width: 100%;
-            }
+            width: 100%;
         }
 
         .table {
@@ -232,11 +228,11 @@
 }
 
 mat-paginator {
-    width: 80%;
+    width: 100%;
+    margin: 1rem 0 0 0;
 
     @include respond(small) {
-        width: 100%;
-        margin: .5rem 0;
+        margin: 1rem 0;
     }
 
 }
