--- a/src/app/views/riders/riders.component.html
+++ b/src/app/views/riders/riders.component.html
@@ -36,7 +36,8 @@
             </button>
         </mat-form-field>
 
-        <table class="table" mat-table [dataSource]="dataSource" matSort>
+        <table class="table" mat-table [dataSource]="dataSource"
+               matSort [matSortActive]="sortBy" [matSortDirection]="sortDir" matSortDisableClear (matSortChange)="sortTable($event)">
 
             <ng-container matColumnDef="avatar">
                 <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
@@ -47,7 +48,7 @@
             </ng-container>
 
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="lastName">Name</th>
                 <td mat-cell *matCellDef="let rider">{{ rider.lastName }} {{ rider.firstName }}</td>
             </ng-container>
 
