--- a/src/app/common/carousel/carousel.component.html
+++ b/src/app/common/carousel/carousel.component.html
@@ -1,9 +1,10 @@
 <div class="carrousel">
     <ul *ngIf="true" #carouselList>
         <li *ngFor="let element of elements" #craouselListItem
-            (panleft)="onPan($event, element)"
-            (panright)="onPan($event, element)"
-            (panend)="onPanEnd($event, element)"
+            (panleft)="onPan($event, craouselListItem)"
+            (panright)="onPan($event, craouselListItem)"
+            (panend)="onPanEnd($event, craouselListItem)"
+            (pancancel)="onPanEnd($event, craouselListItem)"
             [style.touch-action]="'pan-y'"
         >
             <div class="elementwrapper">
