--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,11 +1,6 @@
 @import "../../../assets/scss/_mixins";
 @import "../../../assets/scss/_responsive";
 
-surf-carousel {
-    width: 400px;
-    max-width: 100%;
-}
-
 .content {
     width: 100%;
     display: flex;
@@ -21,18 +16,28 @@ surf-carousel {
         padding: 2rem;
 
         @include respond(medium) {
-            flex: 100%
+            flex: 100%;
+            padding: 0.5rem;
+            margin: 0.5rem;
+            box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+
         }
 
 
         & .events {
             display: grid;
+            margin-top: 0.5rem;
             grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
             row-gap: 5rem;
             column-gap: 1rem;
 
             @include respond(small) {
                 grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+            }
+
+            & surf-carousel {
+                width: 100%;
+                max-width: 100%;
             }
         }
     }
