--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,12 +53,12 @@ snack-bar-container {
     }
 
     &.warning {
-        // TODO DEFINE COLOR SCHEME
+        // TODO: DEFINE COLOR SCHEME
         color: $color-warn;
     }
 
     &.error {
-        // TODO DEFINE COLOR SCHEME
+        // TODO: DEFINE COLOR SCHEME
         color: $color-error;
     }
 
