--- a/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.html
+++ b/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.html
@@ -1,31 +1,28 @@
-<mat-card>
-    <div class="container">
-        <div class="container__header">
-            <img src="{{rider.profilePicture}}" alt="Profile Picture">
-            <h1>{{rider.firstName}} {{rider.lastName}}</h1>
-            <h2 *ngIf="rider.nickName">{{rider.nickName}}</h2>
+<mat-card class="container">
+    <div class="container__header">
+        <img src="{{rider.profilePicture}}" alt="Profile Picture">
+        <h1>{{rider.firstName}} {{rider.lastName}}</h1>
+        <h2 *ngIf="rider.nickName">{{rider.nickName}}</h2>
+    </div>
+    <div class="container__social">
+        <!-- ToDo: Replace with social component -->
+        <span class="container__social__element"><mat-icon>notifications_none</mat-icon>Facebook</span>
+        <span class="container__social__element"><mat-icon>notifications_none</mat-icon>Instagram</span>
+        <span class="container__social__element"><mat-icon>notifications_none</mat-icon>Twitter</span>
+        <span class="container__social__element"><mat-icon>notifications_none</mat-icon>Notify me</span>
+    </div>
+    <div *ngIf="rider.biography" class="container__biography">
+        {{rider.biography}}
+    </div>
+    <div class="container__rider-info">
+        <div *ngIf="rider.biography">
+            <p class="container__attribute">Division: {{rider.division}}</p>
         </div>
-        <div class="container__social">
-            <!-- ToDo: Replace with social component -->
-            <mat-icon>notifications_none</mat-icon>Facebook
-            <mat-icon>notifications_none</mat-icon>Instagram
-            <mat-icon>notifications_none</mat-icon>Twitter
-            <mat-icon>notifications_none</mat-icon>Notify me
+        <div *ngIf="rider.birthdate">
+            <p class="container__attribute">Birthdate: {{rider.birthdate | date:'d. MMMM YYYY'}}</p>
         </div>
-        <div *ngIf="rider.biography" class="container__biography">
-            {{rider.biography}}
+        <div *ngIf="rider.email">
+            <p class="container__attribute">Mail: <a href="mailto:{{rider.email}}">{{rider.email}}</a></p>
         </div>
-        <ng-container *ngIf="rider.biography">
-            <div class="container__attribute">Division</div>
-            <div class="container__value">{{rider.division}}</div>
-        </ng-container>
-        <ng-container *ngIf="rider.birthdate">
-            <div class="container__attribute">Birthdate</div>
-            <div class="container__value">{{rider.birthdate | date:'d. MMMM YYYY'}}</div>
-        </ng-container>
-        <ng-container *ngIf="rider.email">
-            <div class="container__attribute">Mail</div>
-            <div class="container__value"><a href="mailto:{{rider.email}}">{{rider.email}}</a></div>
-        </ng-container>
     </div>
 </mat-card>
