--- a/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.scss
+++ b/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.scss
@@ -1,17 +1,27 @@
+@import "../../../../../assets/scss/_variables";
+@import "../../../../../assets/scss/_responsive";
 .container {
-    display: grid;
-    grid-template-columns: min-content auto;
-    grid-template-rows: min-content;
-    column-gap: 1rem;
-    row-gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: $color-primary;
+    color: $color-white;
+    padding: 3rem;
+    @include respond(small) {
+        padding: 1rem;
+    }
+
+    & > * {
+        margin: 1.5rem 0;
+    }
 
     &__header {
-        grid-column-start: 1;
-        grid-column-end: 3;
         margin: auto;
         text-align: center;
 
         img {
+            padding: .5rem;
+            background-color: $color-white;
             display: block;
             height: 100%;
             max-width: 200px;
@@ -21,24 +31,49 @@
     }
 
     &__social{
-        grid-column-start: 1;
-        grid-column-end: 3;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        row-gap: 1rem;
+
+        &__element {
+            cursor: pointer;
+            font-size: 1.5rem;
+            font-weight: 300;
+            text-transform: uppercase;
+            display: flex;
+            align-items: center;
+
+            @include respond(small) {
+                font-size: 1rem;
+            }
+        }
+
     }
 
-    &__biography{
-        grid-column-start: 1;
-        grid-column-end: 3;
-        font-style: italic;
+    &__rider-info {
+        display: flex;
+        flex-direction: column;
+
+        & > * {
+            margin-bottom: 1rem;
+        }
     }
 
     &__attribute{
-        grid-column-start: 1;
-        grid-column-end: 2;
-        font-weight: bold;
+        font-size: 1.5rem;
+        font-weight: 300;
+        text-transform: uppercase;
+
+        & a, & a:active {
+            text-decoration: none;
+            color: $color-white;
+        }
+
+        @include respond(small) {
+            font-size: 1rem;
+        }
+
     }
 
-    &__value{
-        grid-column-start: 2;
-        grid-column-end: 3;
-    }
 }
