--- a/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.scss
+++ b/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.scss
@@ -1,3 +1,41 @@
-.padded{
-    padding: 2rem;
+@import "../../../../../assets/scss/_variables";
+@import "../../../../../assets/scss/_responsive";
+
+
+.container__timeline {
+    padding: 3rem;
+
+    @include respond(small) {
+        padding: 1rem;
+    }
+}
+
+
+.timeline__description {
+    margin-top: 1rem;
+    margin-left: 1rem;
+
+    &__title {
+        display: inline-block;
+        color: $color-primary;
+    }
+
+    &__location {
+        display: inline-block;
+        margin-left: .3rem;
+        position: relative; top: -1rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        font-size: 1rem;
+
+    }
+
+    hr {
+        margin-top: .5rem;
+        margin-bottom: 1rem;
+    }
+
+    &__description {
+    margin-bottom: 1.5rem;
+    }
 }
