--- a/src/app/common/time-line/time-line.component.scss
+++ b/src/app/common/time-line/time-line.component.scss
@@ -1,10 +1,11 @@
 @import "../../../assets/scss/_responsive";
+@import "../../../assets/scss/_variables";
 
 .container {
     display: grid;
-    grid-template-columns: min-content minmax(max-content, 60%);
+    grid-template-columns: min-content minmax(max-content, 400px);
     @include respond(medium) {
-        grid-template-columns: min-content auto;
+        grid-template-columns: min-content minmax(max-content, 400px);
     }
     align-items: stretch;
 
@@ -15,19 +16,48 @@
     &__details{
         grid-column: 2 / 3;
         margin: 0.5rem 0;
+        position: relative;
+
+        &__card {
+            display: flex;
+            flex-direction: column;
+            align-items: baseline;
+        }
 
         &__title{
-            display: grid;
-            grid-template-columns: min-content auto;
 
             &__icon{
-                grid-column: 1 / 2;
-                padding-right: 0.5rem;
+                position: absolute;
+                top: 1rem;
+                right: 1rem;
+                background-color: $color-primary;
+                border-radius: 50%;
+                width: 2rem;
+                height: 2rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: $color-white;
+
+                @include respond(small) {
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    top: .2rem;
+                    right: .2rem;
+                    font-weight: bold;
+                }
             }
 
             &__description{
                 grid-column: 2 / 3;
             }
+        }
+
+        &__points {
+            padding: .5rem 1rem;
+            border: 1px solid $color-primary;
+            border-radius: 4px;
+            align-self: flex-end;
         }
     }
 }
