--- a/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.scss
+++ b/src/app/views/riders/rider-profile/rider-timeline/rider-timeline.component.scss
@@ -5,7 +5,9 @@
 .container__timeline {
     padding: 3rem;
 
-    @include respond(small) {
+
+
+    @include respond(medium) {
         padding: 1rem;
     }
 }
