--- a/src/app/views/riders/rider-profile/rider-profile.component.scss
+++ b/src/app/views/riders/rider-profile/rider-profile.component.scss
@@ -24,6 +24,7 @@
     & .details {
         flex: 75%;
         padding: 1rem;
+        overflow: hidden;
 
         @include respond(small) {
             flex: 100%
