--- a/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.scss
+++ b/src/app/views/riders/rider-profile/rider-overview/rider-overview.component.scss
@@ -27,6 +27,10 @@
             border-radius: 50%;
             margin: auto;
         }
+
+        h1 {
+            margin-top: 1rem;
+        }
     }
 
     &__social{
