Person-Icon in Navigation replaced with Surfing-Icon. Signup-Form with autofocus and tabindexes to improve usability. Hide Division-Table-Header in Riders Table if Mobile view to improve layout

--- a/src/app/common/header/navigation/navigation.component.html
+++ b/src/app/common/header/navigation/navigation.component.html
@@ -12,7 +12,7 @@
                 <span>Events</span></div>
             </li>
             <li class="navigation__item" routerLink="/riders" (click)="toggleScrolling(true)"><div class="navigation__link" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active-route">
-                <mat-icon>person</mat-icon>
+                <mat-icon>surfing</mat-icon>
                 <span>Riders</span></div>
             </li>
             <li class="navigation__item" routerLink="/login" (click)="toggleScrolling(true)" ><div class="navigation__link" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active-route">
