--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="main">
     <mat-tab-group mat-align-tabs="center">
         <mat-tab label="Login">
-            <surf-signup-form [formMode]="'login'"></surf-signup-form>
+            <rs-signup-form [formMode]="'login'"></rs-signup-form>
         </mat-tab>
         <mat-tab label="Register">
-            <surf-signup-form [formMode]="'register'"></surf-signup-form>
+            <rs-signup-form [formMode]="'register'"></rs-signup-form>
         </mat-tab>
     </mat-tab-group>
 </div>
