--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -1,5 +1,5 @@
-@import "../../../assets/scss/_mixins";
-@import "../../../assets/scss/_responsive";
+@import "src/assets/scss/mixins";
+@import "src/assets/scss/responsive";
 
 .main {
     padding: 1rem;
